fixed bug : products
